--- a/new.html
+++ b/new.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tarea</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Hola a Todos</h1>
-    <a href="new.html">ir a</a>
+    <a href="https://www.youtube.com/watch?v=7NK_JOkuSVY">pincha aqui</a>
 </body>
 </html>
